--- a/rejestracja_formularz/index.html
+++ b/rejestracja_formularz/index.html
@@ -396,7 +396,7 @@ blockedFields.forEach(id => {
     if (original !== cleaned) {
       el.value = cleaned
       result.textContent =
-        'Adres e-mail i numer telefonu można podać wyłącznie w przeznaczonych do tego polach.'
+        'Adres e-mail i numer telefonu wpisujemy wyłącznie w przeznaczonych do tego polach.Kazda próba złamania regulaminu możepowodowaćzablokowanie profilu elektryka'
       result.className = 'error'
     }
   })
