Add labels and select elements for filters

--- a/wyszukiwarka/index.html
+++ b/wyszukiwarka/index.html
@@ -161,13 +161,20 @@ sup a:hover {
 </header>
 
 <main>
-  <div class="search-card">
+<div class="search-card">
+  <label>
+    Województwo <span style="color:orange;">*</span>
     <select id="wojewodztwo">
       <option value="">Wybierz województwo</option>
     </select>
+  </label>
+
+  <label>
+    Miasto <span style="color:orange;">*</span>
     <select id="miasto">
       <option value="">Wybierz miasto</option>
     </select>
+  </label>
 
     <!-- NOWE FILTRY -->
     <select id="gwiazdki">
