Add labels to filters in index.html

--- a/wyszukiwarka/index.html
+++ b/wyszukiwarka/index.html
@@ -194,14 +194,15 @@ sup a:hover {
   </label>
 
     <!-- NOWE FILTRY -->
-    <select id="gwiazdki">
+  Uprawnienia     <select id="gwiazdki">
       <option value="">Wszystkie uprawnienia</option>
       <option value="1">⭐</option>
       <option value="2">⭐⭐</option>
       <option value="3">⭐⭐⭐</option>
     </select>
 
-    <select id="status">
+   Status
+  <select id="status">
       <option value="">Wszystkie statusy</option>
       <option value="✅">✅ Zweryfikowany</option>
       <option value="⌛">⌛ Weryfikacja w toku</option>
