Add new filters for permissions and status

--- a/wyszukiwarka/index.html
+++ b/wyszukiwarka/index.html
@@ -194,13 +194,15 @@ sup a:hover {
   </label>
 
     <!-- NOWE FILTRY -->
+   <label>
   Uprawnienia     <select id="gwiazdki">
       <option value="">Wszystkie uprawnienia</option>
       <option value="1">⭐</option>
       <option value="2">⭐⭐</option>
       <option value="3">⭐⭐⭐</option>
     </select>
-
+   </label>
+ <label>
    Status
   <select id="status">
       <option value="">Wszystkie statusy</option>
@@ -208,6 +210,7 @@ sup a:hover {
       <option value="⌛">⌛ Weryfikacja w toku</option>
       <option value="❌">❌ Nieudostępnione</option>
     </select>
+ </label>
 
     <label style="display:block;margin-top:10px;">
       <input type="checkbox" id="show_contact">
