Implement mobile responsiveness for table elements
Add mobile styles for table inputs and buttons.

--- a/admin/index.html
+++ b/admin/index.html
@@ -29,6 +29,15 @@ th, td { border:1px solid #ccc; padding:6px; font-size:12px }
 th { background:#222; color:#fff }
 
 /* ===== MOBILE ===== */
+  @media (max-width: 768px) {
+
+  td input,
+  td button {
+    box-sizing: border-box;
+    max-width: 100%;
+  }
+
+}
 @media (max-width: 768px) {
 
   table, thead, tbody, th, tr {
