--- a/admin/index.html
+++ b/admin/index.html
@@ -5,12 +5,10 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Panel admina</title>
 <meta name="robots" content="noindex, nofollow">
-
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
 <style>
 body { font-family: Arial, sans-serif; background:#f4f6f8; padding:20px }
-
 #logBox {
   background:#000;
   color:#0f0;
@@ -20,35 +18,30 @@ body { font-family: Arial, sans-serif; background:#f4f6f8; padding:20px }
   overflow:auto;
   margin-bottom:15px;
 }
-
-input, button, select { width:100%; padding:8px; margin:5px 0 }
+input, button { width:100%; padding:8px; margin:5px 0 }
 button { background:#2ecc71; border:0; color:#fff; cursor:pointer }
-
 table { width:100%; border-collapse:collapse; background:#fff }
 th, td { border:1px solid #ccc; padding:6px; font-size:12px }
 th { background:#222; color:#fff }
 
 /* ===== MOBILE ===== */
 @media (max-width: 768px) {
-
   td input,
-  td button,
-  td select {
-    box-sizing:border-box;
-    max-width:100%;
+  td button {
+    box-sizing: border-box;
+    max-width: 100%;
   }
-
+}
+@media (max-width: 768px) {
   table, thead, tbody, th, tr { display:block }
   thead { display:none }
-
   tr {
     background:#fff;
     margin-bottom:14px;
     padding:12px;
     border-radius:8px;
-    box-shadow:0 2px 8px rgba(0,0,0,.08);
+    box-shadow:0 2px 8px rgba(0,0,0,0.08);
   }
-
   td {
     display:grid;
     grid-template-columns:120px 1fr;
@@ -57,23 +50,19 @@ th { background:#222; color:#fff }
     padding:6px 0;
     font-size:14px;
   }
-
   td::before {
-    content:attr(data-label);
+    content: attr(data-label);
     font-weight:600;
     color:#444;
   }
-
   td input[type="checkbox"] {
-    transform:scale(1.2);
+    transform: scale(1.2);
     justify-self:start;
   }
-
   td[data-label="Akcja"] {
     grid-template-columns:1fr;
     margin-top:8px;
   }
-
   td[data-label="Akcja"]::before { display:none }
 }
 </style>
@@ -111,97 +100,96 @@ th { background:#222; color:#fff }
 </div>
 
 <script>
-function log(txt){
-  const box=document.getElementById("logBox");
-  box.innerHTML+=txt+"<br>";
-  box.scrollTop=box.scrollHeight;
+function log(txt) {
+  const box = document.getElementById("logBox");
+  box.innerHTML += txt + "<br>";
+  box.scrollTop = box.scrollHeight;
 }
+
+log("Start JS");
 
 const supabaseClient = supabase.createClient(
   "https://tfbqqduxtsacvwfigsvt.supabase.co",
-  "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InRmYnFxZHV4dHNhY3Z3Zmlnc3Z0Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjY2OTE4NzcsImV4cCI6MjA4MjI2Nzg3N30.PhuNnwzQ8cZW_UyUjCxXaYAj7xCCiTnOJVd4fUtQRD8"
+  "EYJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9..."
 );
 
-document.getElementById("loginBtn").onclick = login;
+log("Supabase OK");
 
-async function login(){
-  const email=email.value;
-  const password=password.value;
+document.getElementById("loginBtn").addEventListener("click", login);
 
-  const {error}=await supabaseClient.auth.signInWithPassword({email,password});
-  if(error) return log("Błąd logowania");
+async function login() {
+  const email = document.getElementById("email").value;
+  const password = document.getElementById("password").value;
+
+  const { error } = await supabaseClient.auth.signInWithPassword({
+    email, password
+  });
+
+  if (error) return log("BŁĄD LOGOWANIA");
 
   checkSession();
 }
 
-async function checkSession(){
-  const {data}=await supabaseClient.auth.getSession();
-  if(!data.session) return;
+async function checkSession() {
+  const { data } = await supabaseClient.auth.getSession();
+  if (!data.session) return;
 
-  if(data.session.user.email!=="piotr8040@gmail.com"){
+  if (data.session.user.email !== "piotr8040@gmail.com") {
     await supabaseClient.auth.signOut();
     return;
   }
 
-  loginBox.style.display="none";
-  adminPanel.style.display="block";
+  document.getElementById("loginBox").style.display = "none";
+  document.getElementById("adminPanel").style.display = "block";
   loadData();
 }
 
-async function loadData(){
-  const {data,error}=await supabaseClient
+async function loadData() {
+  const { data, error } = await supabaseClient
     .from("tabela_elektrykow")
     .select("id, lp, imie, nazwisko, telefon, email, status, show_contact")
     .order("lp");
 
-  if(error) return log("Błąd bazy");
+  if (error) return log("BŁĄD BAZY");
 
-  tbody.innerHTML="";
+  const tbody = document.getElementById("tbody");
+  tbody.innerHTML = "";
 
-  data.forEach(row=>{
-    const tr=document.createElement("tr");
-
-    tr.innerHTML=`
-      <td data-label="LP"><input value="${row.lp||""}"></td>
-      <td data-label="Imię"><input value="${row.imie||""}"></td>
-      <td data-label="Nazwisko"><input value="${row.nazwisko||""}"></td>
-      <td data-label="Telefon"><input value="${row.telefon||""}"></td>
-      <td data-label="Email"><input value="${row.email||""}"></td>
-
-      <td data-label="Status">
-        <select class="status">
-          <option value="zweryfikowany" ${row.status==="zweryfikowany"?"selected":""}>Zweryfikowany</option>
-          <option value="w trakcie weryfikacji" ${row.status==="w trakcie weryfikacji"?"selected":""}>W trakcie</option>
-        </select>
-      </td>
-
+  data.forEach(row => {
+    const tr = document.createElement("tr");
+    tr.innerHTML = `
+      <td data-label="LP"><input value="${row.lp || ""}"></td>
+      <td data-label="Imię"><input value="${row.imie || ""}"></td>
+      <td data-label="Nazwisko"><input value="${row.nazwisko || ""}"></td>
+      <td data-label="Telefon"><input value="${row.telefon || ""}"></td>
+      <td data-label="Email"><input value="${row.email || ""}"></td>
+      <td data-label="Status"><input value="${row.status || ""}"></td>
       <td data-label="Pokaż kontakt" style="text-align:center">
-        <input type="checkbox" ${row.show_contact?"checked":""}>
+        <input type="checkbox" ${row.show_contact ? "checked" : ""}>
       </td>
-
       <td data-label="Akcja"><button>Zapisz</button></td>
     `;
 
-    tr.querySelector("button").onclick=async()=>{
-      const i=tr.querySelectorAll("input");
-      const status=tr.querySelector(".status").value;
+    tr.querySelector("button").onclick = async () => {
+      const i = tr.querySelectorAll("input");
 
-      const payload={
-        lp:i[0].value,
-        imie:i[1].value,
-        nazwisko:i[2].value,
-        telefon:i[3].value,
-        email:i[4].value,
-        show_contact:i[5].checked,
-        status:status
+      const payload = {
+        lp: i[0].value,
+        imie: i[1].value,
+        nazwisko: i[2].value,
+        telefon: i[3].value,
+        email: i[4].value,
+        status: i[5].value,
+        show_contact: i[6].checked
       };
 
-      const {error}=await supabaseClient
+      const { error } = await supabaseClient
         .from("tabela_elektrykow")
         .update(payload)
-        .eq("id",row.id);
+        .eq("id", row.id);
 
-      log(error?"Błąd zapisu":"Zapisano ID: "+row.id);
+      if (error) log("Błąd zapisu");
+      else log("Zapisano ID: " + row.id);
     };
 
     tbody.appendChild(tr);
@@ -210,6 +198,5 @@ async function loadData(){
 
 checkSession();
 </script>
-
 </body>
 </html>
